tests/baselines/reference/chainedAssignment2.errors.txt
tests/cases/compiler/chainedAssignment2.ts(7,1): error TS2322: Type 'RegExp' is not assignable to type 'string'.
tests/cases/compiler/chainedAssignment2.ts(7,5): error TS2322: Type 'RegExp' is not assignable to type 'number'.
tests/cases/compiler/chainedAssignment2.ts(7,9): error TS2322: Type 'RegExp' is not assignable to type 'boolean'.
tests/cases/compiler/chainedAssignment2.ts(7,13): error TS2322: Type 'RegExp' is not assignable to type 'Date'.
  Property 'toDateString' is missing in type 'RegExp'.


==== tests/cases/compiler/chainedAssignment2.ts (4 errors) ====
    var a: string;
    var b: number;
    var c: boolean;
    var d: Date;
    var e: RegExp;
    
    a = b = c = d = e = null;
    ~
!!! error TS2322: Type 'RegExp' is not assignable to type 'string'.
        ~
!!! error TS2322: Type 'RegExp' is not assignable to type 'number'.
            ~
!!! error TS2322: Type 'RegExp' is not assignable to type 'boolean'.
                ~
!!! error TS2322: Type 'RegExp' is not assignable to type 'Date'.
!!! error TS2322:   Property 'toDateString' is missing in type 'RegExp'.
    
    